--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-unsloth>=2025.1.0
-transformers>=4.43.0
-peft>=0.11.0
-trl>=0.9.6
-datasets>=2.20.0
-accelerate>=1.10.0
-bitsandbytes>=0.43.3 ; platform_system != "Windows"
-evaluate>=0.4.2
-scikit-learn>=1.5.0
-tqdm>=4.66.0
-numpy>=1.26.0
-torch>=2.3.0
+unsloth==2025.1.2
+transformers==4.46.3
+peft==0.11.1
+trl==0.9.6
+datasets==2.20.0
+accelerate==1.10.0
+bitsandbytes==0.43.3 ; platform_system != "Windows"
+evaluate==0.4.2
+scikit-learn==1.5.0
+tqdm==4.66.4
+numpy==1.26.4
+requests
