Add hf trainer and hf script

--- a/env.yml
+++ b/env.yml
@@ -1,4 +1,4 @@
-name: lora-bench-test
+name: unsloth_bench
 channels:
   - nvidia
   - pytorch
@@ -16,12 +16,12 @@ dependencies:
       - --extra-index-url https://download.pytorch.org/whl/cu121
 
       # Core libs (versions known-good with Unsloth)
-      - bitsandbytes==0.45.0
+      - bitsandbytes==0.43.3
       - transformers==4.46.3
       - peft==0.11.1
       - trl==0.9.6
       - datasets==2.20.0
-      - accelerate==1.10.0
+      - accelerate>=0.34.2,<1.3
       - evaluate==0.4.2
       - scikit-learn==1.5.0
       - numpy==1.26.4
